[package]
name = "elara-launcher"
version = "0.1.0"
description = "Launcher for the Elara Desktop"
license = "MIT"
edition = "2024"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
gdk = { version = "0.9", package = "gdk4" }
glib = "0.20"
tokio = { version = "1", features = ["full"] }
fuzzy-matcher = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"